fix alignment

--- a/src/cssGlobals/_row.scss
+++ b/src/cssGlobals/_row.scss
@@ -16,6 +16,7 @@ bwc-row {
   margin-top: calc(-1 * var(--bs-gutter-y));
   margin-right: calc(-0.5 * var(--bs-gutter-x));
   margin-left: calc(-0.5 * var(--bs-gutter-x));
+  text-align: inherit;
 
   > * {
     box-sizing: border-box;
